--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - 9000:9000
       - 9092:9092
     container_name: sonarqube
+    networks:
+      - back
   jenkins:
     build:
       context: jenkins/
@@ -17,7 +19,13 @@ services:
       - 50000:50000
     container_name: jenkins
     volumes:
-      - /Users/natemoran/docker/jenkins-pipeline/jenkins/jenkins_home:/var/jenkins_home #Remember that, the tmp directory is designed to be wiped on system reboot.
+      - /Users/natemoran/docker/jenkins-pipeline/jenkins/jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - sonarqube
+    networks:
+      - back
+
+networks:
+  back:
+    driver: bridge
